[project]
name = "graph-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.46",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.17",
    "openai>=1.66.5",
    "streamlit>=1.43.2",
]
